# stm32workspace

./: .ycm_extra_conf.py  README.md
cmake/: SetBuildFlags.cmake  SetupToolchain.cmake  functions.cmake
lib/CMSIS/device/: stm32f10x.h
lib/StdPeriph_Driver/: CMakeLists.txt
lib/drivers/st7735/: CMakeLists.txt  st7735.c  st7735.h
lib/startup/: startup_stm32.s
openocd/: csk32f103.cfg
projects/led_blink/: CMakeLists.txt
projects/led_blink/src/: main.c
projects/st7735_example/: CMakeLists.txt
projects/st7735_example/src/: girl_rgb565.h  img.h  main.c  main.h
scripts/: LinkerScript.ld  flash.sh
